atualização do projeto

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,13 +1,16 @@
 <div class="containner__big-card">
   <div class="big-card__photo">
-    <img src="https://www.esporteinterativo.com.br/img/2020/07/09/gettyimages-1253932866_1.jpg" alt="Imagem do jogador Vinicius Jr">
+    <img src= "{{photoCover}}" alt="Imagem do jogador Vinicius Jr">
   </div>
 
   <div class="big-card__title">
-    <h1><a href="https://www.msn.com/pt-br/esportes/other/imprensa-europeia-esquece-vin%C3%ADcius-j%C3%BAnior-do-real-madrid-e-aponta-o-pr%C3%B3ximo-vencedor-da-bola-de-ouro/ar-AA1u26Gp?ocid=msedgntp&pc=U531&cvid=737a00c415d64a29aec9e2d5abe28ee6&ei=13">Imprensa europeia 'esquece' Vinícius Júnior, do Real Madrid, e aponta o próximo vencedor da Bola de Ouro</a></h1>
+    <h1><a href="https://www.msn.com/pt-br/esportes/other/imprensa-europeia-esquece-vin%C3%ADcius-j%C3%BAnior-do-real-madrid-e-aponta-o-pr%C3%B3ximo-vencedor-da-bola-de-ouro/ar-AA1u26Gp?ocid=msedgntp&pc=U531&cvid=737a00c415d64a29aec9e2d5abe28ee6&ei=13">
+      {{cardTitle}}
+    </a></h1>
   </div>
   <div class="big-card__description">
-    <p><a href="https://www.msn.com/pt-br/esportes/other/imprensa-europeia-esquece-vin%C3%ADcius-j%C3%BAnior-do-real-madrid-e-aponta-o-pr%C3%B3ximo-vencedor-da-bola-de-ouro/ar-AA1u26Gp?ocid=msedgntp&pc=U531&cvid=737a00c415d64a29aec9e2d5abe28ee6&ei=13">Injustiçado? Vinícius Júnior segue em grande fase pelo Real Madrid e, para muitos, é o verdadeiro melhor jogador do mundo.
-    Entretanto, é fato que quem ostenta o prêmio em sua estante é Rodri, do Manchester City.</a></p>
+    <p><a href="https://www.msn.com/pt-br/esportes/other/imprensa-europeia-esquece-vin%C3%ADcius-j%C3%BAnior-do-real-madrid-e-aponta-o-pr%C3%B3ximo-vencedor-da-bola-de-ouro/ar-AA1u26Gp?ocid=msedgntp&pc=U531&cvid=737a00c415d64a29aec9e2d5abe28ee6&ei=13">
+      {{cardDescription}}
+    </a></p>
   </div>
 </div>
