--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,11 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li href="#">Linkedin</li>
+    <li><span>|</span></li>
+    <li href="#">GitHub</li>
+    <li><span>|</span></li>
+    <li href="#">Intagram</li>
+  </ul>
+
+
+</div>
