--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,15 +1,17 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img src="https://livesport-ott-images.ssl.cdn.cra.cz/r900xfq60/777189a8-2a90-486e-801b-8a9890176dc4.jpeg" alt="Imagem do Técico Dorival">
+      <img src="{{photoCover}}" alt="Imagem do Técico Dorival">
     </div>
 
     <div div="small-card__title">
       <h3><a href="https://ge.globo.com/futebol/selecao-brasileira/noticia/2024/11/14/dorival-destaca-chances-
         do-brasil-contra-a-venezuela-e-lamenta-mereciamos-uma-sorte-melhor.ghtml">
-        Dorival elogia atuação, mas diz que Brasil teve "um erro que foi fatal"</a>
+        {{cardTitle}}</a>
       </h3>
     </div>
+
+
   </div>
   <div class="container__small-card__separator">
     <hr/>
