--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,75 @@
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
 
 <app-menu-title></app-menu-title>
 
+<h1>Notícias Principais</h1>
 <div class="container__articles">
   <div class="articles__main">
-      <app-big-card></app-big-card>
+      <app-big-card photoCover="https://s2-g1.glbimg.com/YBpOa5bgPPlEZLn74BamAXhC_NM=/0x0:1600x1200/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2024/8/7/wdh8MjRCWwdJzCs3D4QQ/2024-11-15t234434z-603874799-rc2y5bap9s6i-rtrmadp-3-argentina-crime-nazi.jpg"
+      cardTitle="Polícia argentina apreende arsenal com mais de 60 armas nazistas na região de Buenos Aires"
+      cardDescription="Mais de 60 armas de fogo foram encontradas na casa de um homem, incluindo rifles, pistolas e uma metralhadora. Bandeiras nazistas e bustos de Hitler foram apreendidos.">
+    </app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+    photoCover="https://s2-g1.glbimg.com/ZIR7exlKALwvipJ9vNg8xNgqALo=/0x0:1920x1080/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2024/r/h/dhufguScqZ0heNMeWApg/design-sem-nome.png"
+    cardTitle="Miss Universo tem pela 1ª vez mulher com vitiligo, modelo surda e candidatas com mais de 28 anos"></app-small-card>
+    <app-small-card
+    photoCover="https://s2-g1.glbimg.com/8e_zhPmOAvUmdvmGmPOg5eWniJg=/0x0:1476x819/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2024/T/1/cYgOD9QIA8Inm0cCaGTA/captura-de-tela-2024-11-15-203736.png"
+    cardTitle="Novas imagens mostram o planejamento e o trajeto do homem que detonou explosivos em frente ao STF"></app-small-card>
+    <app-small-card
+    photoCover="https://s2-g1.glbimg.com/u-xL01LIl5HpNUJzAlp_FV5UexU=/0x0:1319x654/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2024/8/1/0kj4AITWeAUhBtFC7CpA/captura-de-tela-2024-11-15-215207.png"
+    cardTitle= "Natal Luz atrai mais de um milhão de turistas para a Serra Gaúcha"></app-small-card>
   </div>
 
 </div>
 
-<div>
-  <hr/>
-</div>
+
+<h1>Esporte</h1>
 
 <div class="container__articles">
   <div class="articles__main">
-      <app-big-card></app-big-card>
+      <app-big-card photoCover="https://lncimg.lance.com.br/cdn-cgi/image/width=828,quality=75,fit=pad,format=webp/uploads/2024/11/Vini-Jr-agradecimento-aspect-ratio-512-320.jpg"
+      cardTitle="Imprensa europeia 'esquece' Vinícius Júnior, do Real Madrid, e aponta o próximo vencedor da Bola de Ouro"
+      cardDescription="Vinícius Júnior segue em grande fase pelo Real Madrid e, para muitos, é o verdadeiro melhor jogador do mundo. Entretanto, é fato que quem ostenta o prêmio em sua estante é Rodri, do Manchester City.">
+    </app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+    photoCover="https://s2-ge.glbimg.com/oqdlZmooo7Fcq9OIrTDE5mrDLyc=/0x0:3872x2660/1000x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2024/6/3/IR8Jf9QtGHhaMBBGA5kA/gettyimages-2184287180.jpg"
+    cardTitle="Tyson x Paul: Whindersson Nunes perde para Goyat em estreia profissional"></app-small-card>
+    <app-small-card
+    photoCover="https://s2-ge.glbimg.com/lZxXiuEKiYGdBjLMyHDSHPkfC-c=/0x0:5014x3342/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2023/7/Y/laBfq8ScOvydTPsnptTw/000-33em7nr.jpg"
+    cardTitle="Lyon, de John Textor, é proibido de contratar e será rebaixado se não melhorar situação financeira"></app-small-card>
+    <app-small-card
+    photoCover="https://s2-ge.glbimg.com/lPSoqQrzBpNz7WKaJ8zMWS3F0v8=/0x0:4891x3271/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2024/9/5/k4UBpRSvSfH9EF5PAH8Q/2024-11-15t220747z-1857252515-up1ekbf1pe4n2-rtrmadp-3-soccer-uefanations-rom-kvx-report.jpg"
+    cardTitle= "Seleção do Kosovo abandona o campo após torcida romena gritar ''Sérvia'' em jogo da Liga das Nações"></app-small-card>
+  </div>
+
+</div>
+
+
+<h1>Cinema</h1>
+
+<div class="container__articles">
+  <div class="articles__main">
+      <app-big-card photoCover="https://th.bing.com/th/id/R.694fd59cc5e15150bc730cec898e0b6e?rik=E93%2fkuR1nP%2bMSw&pid=ImgRaw&r=0"
+      cardTitle="As grandes estreias do Cinema em 2025: O que esperar?"
+      cardDescription="O ano de 2025 promete ser um marco significativo para a indústria cinematográfica.">
+    </app-big-card>
+  </div>
+  <div class="articles__others">
+    <app-small-card
+    photoCover="https://br.web.img2.acsta.net/img/17/5f/175fc716afca0146222492a880f36bb6.jpg"
+    cardTitle="O filme mais comentado do ano ganha data de estreia no Disney+: Chegou sua vez de ver Deadpool & Wolverine quantas vezes quiser."></app-small-card>
+    <app-small-card
+    photoCover="https://br.web.img2.acsta.net/img/cc/5b/cc5b12e46e706a4539aac9ea1e827d99.jpg"
+    cardTitle="Este clássico de fantasia perturbou uma geração inteira - e você pode vê-lo no streaming!"></app-small-card>
+    <app-small-card
+    photoCover="https://br.web.img3.acsta.net/img/22/c3/22c3928572f87587469d2a983c3d5cd0.jpg"
+    cardTitle= "25 anos depois: Estrela de Bad Boys está trabalhando na sequência de outro sucesso de ação dos anos 90"></app-small-card>
   </div>
 
 </div>
