--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,16 @@
+h1{
+ margin-top: 50px;
+  display: flex;
+  justify-content: center;
+
+}
+
+header{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
 .container__articles {
   margin-top: 30px;
   display: flex;
